--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 project(libetest)
 
 # files
-file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR}/src "*.c")
-file(GLOB_RECURSE HEADERS RELATIVE ${CMAKE_SOURCE_DIR}/src "*.h")
+file(GLOB_RECURSE SOURCES "*.c")
+file(GLOB_RECURSE HEADERS "*.h")
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES} ${HEADERS})
 
